Add styling to book objects

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   <main>
     <header><h1>Awesome Books</h1></header>
     <section class="display" data-display></section>
+    <div class="divider"><div></div></div>
     <section class="input">
+      <h2>Add a new book</h2>
       <article><input type="text" placeholder="Title" class="input-field" data-title></article>
       <article><input type="text" placeholder="Author" class="input-field" data-author></article>
-      <article><button type="button">Add</button></article>
+      <article class="btn"><button type="button">Add</button></article>
     </section>
   </main>
 </body>
