add footer and contact section

--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
 
 <body>
   <header>
-    <div class="header-items">
-      <p>Awesome Books</p>
-      <nav>
-        <a class="list" href="#">List</a>
-        <a class="add" href="#">Add new</a>
-        <a class="contact" href="#">Contact</a>
-      </nav>
-    </div>
-    <div class="date">date</div>
+ 
+      <div class="header-items">
+        <p>Awesome Books</p>
+        <nav>
+          <a class="list" href="#">List</a>
+          <a class="add" href="#">Add new</a>
+          <a class="contact" href="#">Contact</a>
+        </nav>
+      </div>
+      <div class="date">date</div>
+ 
   </header>
+
   <main>
-    <section id="book-list" class="nav-pages">
+    <section id="book-list"  class="nav-pages">
       <header>
         <h1>Awesome Books</h1>
       </header>
@@ -40,8 +43,7 @@
     </section>
 
     <section id="contact-info" class="nav-pages">
-      <div class="date">date</div>
-      <div class="contact-info">
+      <div class="contact">
         <h2>Contact information</h2>
         <p>Do have any questions or you just want to say "Hello"?</p>
         <p>You can reach out to us!</p>
