--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <div class="header-items">
         <p>Awesome Books</p>
         <nav>
-          <a class="list" href="#">List</a>
-          <a class="add" href="#">Add new</a>
-          <a class="contact" href="#">Contact</a>
+          <a class="list" href="#" data-list>List</a>
+          <a class="add" href="#" data-add>Add new</a>
+          <a class="contact" href="#" data-contact>Contact</a>
         </nav>
       </div>
       <div class="date">date</div>
@@ -26,14 +26,14 @@
   </header>
 
   <main>
-    <section id="book-list"  class="nav-pages">
+    <section id="book-list"  class="nav-pages" data-book-list>
       <header>
         <h1>Awesome Books</h1>
       </header>
       <section class="display" data-display></section>
     </section>
 
-    <section id="add-book" class="nav-pages">
+    <section id="add-book" class="nav-pages" data-add-book>
       <section class="input">
         <h2>Add a new book</h2>
         <article><input type="text" placeholder="Title" class="input-field" data-title></article>
@@ -42,7 +42,7 @@
       </section>
     </section>
 
-    <section id="contact-info" class="nav-pages">
+    <section id="contact-info" class="nav-pages" data-contact-info>
       <div class="contact">
         <h2>Contact information</h2>
         <p>Do have any questions or you just want to say "Hello"?</p>
